@@ -103,8 +103,12 @@ QStringList getCommandLineArguments()
     QString makeFlags = qGetEnvironmentVariable(L"JOMFLAGS");
     if (makeFlags.isEmpty())
         makeFlags = qGetEnvironmentVariable(L"MAKEFLAGS");
-    if (!makeFlags.isEmpty())
-        commandLineArguments.prepend(QLatin1Char('/') + makeFlags);
+    if (!makeFlags.isEmpty()) {
+        if (makeFlags.startsWith(QLatin1Char('-')))
+            makeFlags.remove(0, 1);
+        if (!makeFlags.isEmpty())
+            commandLineArguments.prepend(QLatin1Char('/') + makeFlags);
+    }
     return commandLineArguments;
 }
 
